2020-07-02  Kostas Chasialis  <sdi1600195@di.uoa.gr>

	* libpoke/libpoke.h (pk_make_struct): Prototype.
	(pk_struct_nfields): Likewise.
	(pk_struct_field_boffset): Likewise.
	(pk_struct_set_field_boffset): Likewise.
	(pk_struct_field_name): Likewise.
	(pk_struct_set_field_name): Likewise.
	(pk_struct_field_value): Likewise.
	(pk_struct_set_field_value): Likewise.
	* libpoke/pk-val.c (pk_make_struct): Define.
	(pk_struct_nfields): Likewise.
	(pk_struct_field_boffset): Likewise.
	(pk_struct_set_field_boffset): Likewise.
	(pk_struct_field_name): Likewise.
	(pk_struct_set_field_name): Likewise.
	(pk_struct_field_value): Likewise.
	(pk_struct_set_field_value): Likewise.

2020-07-02  Kostas Chasialis  <sdi1600195@di.uoa.gr>

	* libpoke/libpoke.h (pk_array_elem_val): Prototype documentation
	now describes what happens in case invalid IDX is passed.
	(pk_array_set_elem_val): Likewise.
	(pk_array_elem_boffset): Likewise.
	(pk_array_set_elem_boffset): Likewise.
	* libpoke/pk-val.c (pk_array_elem_val): Check for IDX.
	(pk_array_set_elem_val): Likewise.
	(pk_array_elem_boffset): Likewise.
	(pk_array_set_elem_boffset): Likewise.

2020-07-02  Kostas Chasialis  <sdi1600195@di.uoa.gr>

	* etc/pk-mi-json-schema.json : JSON Schema

2020-06-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y (expression): Finish break statements in the
	try-until body.
	* libpoke/pkl-gen.c (pkl_gen_pr_try_until_stmt): Use
	pkl_asm_loop/pkl_asm_endloop to support `break' statements in the
	body.
	* doc/poke.texi (try-until): Mention that `break' is allowed in
	try-until loops.
	* testsuite/poke.pkl/try-until-4.pk: New test.
	* testsuite/poke.pkl/try-until-6.pk: Likewise.
	* testsuite/poke.pkl/try-until-5.pk: Likewise.

2020-06-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_loop_stmt): Use pkl_asm_while_loop
	and pkl_asm_while_endloop.
	* libpoke/ras: Likewise.
	* libpoke/pkl-asm.h (pkl_asm_while_loop): Renamed from
	pkl_asm_loop.