@@ -1,3 +1,9 @@
+2020-07-12  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pk-val.c: Remove trailing whitespace.
+	* libpoke/libpoke.h: Likewise.
+	* etc/pk-mi-json-schema.json: Add missing newline at EOF.
+
 2020-07-02  Kostas Chasialis  <sdi1600195@di.uoa.gr>
 
 	* libpoke/libpoke.h (pk_make_struct): Prototype.
